# SPyKeS

./: LICENSE  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: python-package.yml  python-publish.yml
spykes/: decrypted_temporary_file.py  parsing.py  secret.py  spk.py  store.py  store_manager.py
spykey/: spk.py
test/: test_boxed.py  test_main.py  test_parsing.py  test_secret.py  test_store.py
